--- a/index.html
+++ b/index.html
@@ -212,6 +212,30 @@
       .openCloseAction > .chevron-double-right { display: block; }
       .opened .openCloseAction > .chevron-double-left { display: block; }
       .opened .openCloseAction > .chevron-double-right { display: none; }
+
+      .pageFooter {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-top: 1px solid #ccc;
+        background-color: #eee;
+        padding: 2px 0 4px;
+      }
+      .pageFooter .textContent {
+        color: #333;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 14px;
+        text-align: center;
+      }
+      .pageFooter .textContent .externalLink {
+        color: #333;
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
+        display: inline-block;
+        border-bottom: 1px dashed #333;
+      }
     </style>
     <style>
       /* credits for loading animation go to https://loading.io/css/ */
@@ -562,6 +586,14 @@
         <div class="loadingModal-progress"></div>
       </div>
     </section>
+
+    <footer class="pageFooter">
+      <div class="textContent">
+        <a class="externalLink" href="https://github.com/spearwolf/kiwotigo" target="_blank">kiwotigo</a>
+        &mdash; a javascript experiment by
+        <a class="externalLink" href="https://www.spearwolf.de/" target="_blank">spearwolf</a>
+      </div>
+    </footer>
 
     <script src="kiwotigo-demo.js"></script>
   </body>
