fix bottom page margin

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       main {
         width: 80vw;
         padding-top: 20px;
+        padding-bottom: 40px;
         margin-left: auto;
         margin-right: auto;
         display: flex;
