--- a/test-kiwotigo-wasm-bridge.html
+++ b/test-kiwotigo-wasm-bridge.html
@@ -2,8 +2,13 @@
   <head>
     <meta charset="utf-8" />
     <title>test kiwotigo-wasm-bridge.mjs</title>
+    <style>
+      body {
+        background-color: #123;
+      }
+    </style>
     <script type="module">
-      import * as kiwotigo from "./kiwotigo-wasm-bridge.mjs";
+      import * as kiwotigo from "./src/kiwotigo-wasm-bridge.js";
       console.log("kiwotigo", kiwotigo);
     </script>
   </head>
