--- a/test-kiwotigo-wasm.html
+++ b/test-kiwotigo-wasm.html
@@ -2,7 +2,12 @@
   <head>
     <meta charset="utf-8" />
     <title>test kiwotigo (wasm)</title>
-    <script src="wasm_exec.js"></script>
+    <style>
+      body {
+        background-color: #123;
+      }
+    </style>
+    <script src="src/wasm_exec.js"></script>
     <script>
       const go = new Go();
       const __kiwotiGo = WebAssembly.instantiateStreaming(
