--- a/index.html
+++ b/index.html
@@ -705,6 +705,21 @@
               step="0.01"
             />
           </div>
+          <div class="kiwotigo-input-row create-only">
+            <label class="kiwotigo-form-label" for="divisibilityBy"
+              >divisibilityBy</label
+            >
+            <input
+              class="kiwotigo-form-input"
+              id="divisibilityBy"
+              name="divisibilityBy"
+              type="number"
+              value="2"
+              min="1"
+              max="10"
+              step="1"
+            />
+          </div>
           <div class="kiwotigo-input-row">
             <label class="kiwotigo-form-label" for="maxExtendedOuterRangeFactor"
               >maxExtendedOuterRange</label
